refac(doc): #3314 oneshot-link-rules
- Including link to Rules on this section.


Former-commit-id: a5cf25a798b8b2d2003d82cc2c9760b6d7165b81

--- a/new/content/pages/use-cases/one-shot/environments/index.adoc
+++ b/new/content/pages/use-cases/one-shot/environments/index.adoc
@@ -8,7 +8,7 @@
 
 = Severity and Testing Environments
 
-You can decide through *Rules* which security requirements will be tested.
+You can decide through link:../../../rules/[*Rules*] which security requirements will be tested.
 You can know the exact severity of each hacking
 (for inspected and uninspected profiled requirements).
 Basic service allows you to choose a single production, testing, or integration
