refac(doc): #3316 oneshot-link-integrates
- Including link to Integrates on this section.


Former-commit-id: 8d12e79a55e2b327d038942a2011ca802e5625e8

--- a/new/content/pages/use-cases/one-shot/vuln-management/index.adoc
+++ b/new/content/pages/use-cases/one-shot/vuln-management/index.adoc
@@ -9,7 +9,7 @@
 = Vulnerability Management Platform
 
 You can check the status of findings during the execution of the project using
-*Integrates*.
+link:../../../products/integrates/[*Integrates*].
 Each project must have a manager so that he or she can express the needs of your
 company before, during, and after the performance.
 Daily progress reports are sent by email. These include coverage, strictness,
