refac(doc): #3248 toe-link-careers
- Fixed the link for ToE on technical challenges, careers.


Former-commit-id: 551c22896f70718989253ebfea8bafa6c8506069

--- a/content/pages/careers/technical-challenges/index.adoc
+++ b/content/pages/careers/technical-challenges/index.adoc
@@ -213,8 +213,8 @@ of why these challenges are important,
 you can proceed to the [inner]#link:https://gitlab.com/fluidattacks/writeups/wikis/Submission[Submission guide]#
 and start posting your solutions. Good luck!
 
-== 10. keywords
+== 10. Keywords
 
-. `ToE`: link:https://csrc.nist.gov/glossary/term/target-of-evaluation[Target Of Evaluation]
+. `ToE`: link:https://csrc.nist.gov/glossary/term/target_of_evaluation[Target of Evaluation]
 . `VBD`: Vulnerable by design
 . `CTF`: link:https://ctftime.org/ctf-wtf/[Capture The Flag]
