--- a/content/pages/services/differentiators/index.adoc
+++ b/content/pages/services/differentiators/index.adoc
@@ -26,8 +26,8 @@ a|==== Independence
 | {yes} We don't install, maintain, operate or sell other security products.
 With no hidden agendas, you can have confidence
 in the independence and impartiality of our report
-link:../continuous-hacking/#remediation-support[^1^]
-link:../one-shot-hacking/#remediation[^2^].
+link:../../use-cases/continuous/remediation/[^1^]
+link:../../use-cases/one-shot/[^2^].
 | {no}  Since other providers develop, maintain, install or operate
 security controls such as `SOC`, `NAC`, Firewalls etc,
 they may not be truly impartial nor independent.
@@ -56,8 +56,8 @@ a|==== Method
 
 a|==== Team
 a|{yes} Our hackers are certified in practical hacking in real scenarios
-link:../continuous-hacking/#highly-trained-hacking-team[^3^]
-link:../one-shot-hacking/#highly-trained-hacking-team[^4^]:
+link:../../use-cases/continuous/[^3^]
+link:../../use-cases/one-shot/[^4^]:
 
 * `OSCP`.
 * `OSWP`.
@@ -75,8 +75,8 @@ through questions and answers:
 
 a|==== Model
 | `Red Team`
-link:../continuous-hacking/#testing-techniques[^5^]
-link:../one-shot-hacking/#testing-techniques[^6^].
+link:../../use-cases/continuous/hacking-techniques/[^5^]
+link:../../use-cases/one-shot/hacking-techniques/[^6^].
 | Vulnerability Analysis with selective exploitation.
 
 a|==== Targets
@@ -97,10 +97,10 @@ a|* Web applications.
 
 a|==== Techniques
 a|{yes} 1 service, all the techniques
-link:../continuous-hacking/#exploitation[^7^]
-link:../continuous-hacking/#critical-information-extraction[^8^]
-link:../one-shot-hacking/#exploitation[^9^]
-link:../one-shot-hacking/#critical-information-extraction[^10^]:
+link:../../use-cases/continuous/mock-attacks/[^7^]
+link:../../use-cases/continuous/critical-information/[^8^]
+link:../../use-cases/one-shot/infection/[^9^]
+link:../../use-cases/one-shot/critical-information/[^10^]:
 
 * link:../../blog/fuzzy-bugs-online/[Fuzzing].
 * Dynamic (`DAST`), Static (`SAST`) and Interactive (`IAST`) Security Testing.
@@ -116,8 +116,8 @@ link:../one-shot-hacking/#critical-information-extraction[^10^]:
 
 a|==== link:../../blog/delimit-ethical-hacking/[Scope]
 a|{yes} Precision and granularity in the attack surface
-link:../continuous-hacking/#coverage[^11^]
-link:../one-shot-hacking/#coverage[^12^]:
+link:../../use-cases/continuous/environments/[^11^]
+link:../../use-cases/one-shot/environments/[^12^]:
 
 * For infrastructure (networks, servers, etc),
 according to `TCP` and `UDP` open ports.
@@ -148,7 +148,7 @@ a|{yes} Integrable with any development method, such as:
 * Agile.
 * `DevOps`.
 
-[button]#link:../../services/continuous-hacking/[Continuous Hacking]#, +
+[button]#link:../../use-cases/continuous/[Continuous Hacking]#, +
 {sp} +
 [button]#link:../../products/integrates/[Integrates]# +
 {sp} +
@@ -161,18 +161,18 @@ a|{no} Integrable with a single development method:
 
 a|==== Environments
 a|* Integration:
-[button]#link:../../services/continuous-hacking/[Continuous Hacking]#
+[button]#link:../../use-cases/continuous/[Continuous Hacking]#
 and [button]#link:../../products/asserts/[Asserts]#
 fit perfectly in this use case
-link:../continuous-hacking/#testing-environments[^13^]
-link:../one-shot-hacking/#testing-environments[^14^].
+link:../../use-cases/continuous/environments/[^13^]
+link:../../use-cases/one-shot/environments/[^14^].
 * Staging.
 * Production.
 a|* Staging.
 * Production.
 
 a|==== Windows
-a|{yes} In the [button]#link:../../services/continuous-hacking/[Continuous Hacking]#
+a|{yes} In the [button]#link:../../use-cases/continuous/[Continuous Hacking]#
 service environments:
 
 * Can constantly change.
@@ -182,8 +182,8 @@ service environments:
 
 a|==== Coverage
 a|{yes} Known
-link:../continuous-hacking/#coverage[^15^]
-link:../one-shot-hacking/#coverage[^16^]:
+link:../../use-cases/continuous/environments/[^15^]
+link:../../use-cases/one-shot/environments/[^16^]:
 
 * In fixed scopes the exact part of the attack surface to be verified,
 and its proportion with respect to the total, is agreed upon in advance.
@@ -197,15 +197,15 @@ what was tested and what was not.
 a|==== Profiling
 | {yes} You decide the security requirements that we will check
 during the hacking service
-through our product [button]#link:../../products/rules/[Rules]#.
+through our product [button]#link:../../rules/[Rules]#.
 | {no} Non-parameterizable.
 
 a|==== Strictness
 | {yes} You will know the exact strictness of the hacking
 (for inspected and non-inspected
 link:#profiling[profiled] requirements)
-link:../continuous-hacking/#strictness[^17^]
-link:../one-shot-hacking/#strictness[^18^].
+link:../../use-cases/continuous/environments/[^17^]
+link:../../use-cases/one-shot/environments/[^18^].
 | {no} Unknown.
 
 a|==== Finding Types
@@ -219,15 +219,14 @@ a|==== Type of Evidence
 a|{yes}  Some of the most relevant evidence is:
 
 * Images of the attack with explanatory annotations.
-* Animated `GIFs` of the attack
-(link:../../products/integrates/#vulnerability-evidences[example]).
+* Animated `GIFs` of the attack.
 a|{no} In the case of other suppliers:
 
 * Images without annotations.
 * Copy-paste of test outcomes which may include false positives.
 
 a|==== Zero Day Vulnerabilities
-| {yes} Yes link:../continuous-hacking/#highly-trained-hacking-team[^19^]
+| {yes} Yes link:../../use-cases/continuous/hacking-techniques/[^19^]
 | {no} No
 
 a|==== False Positives
@@ -236,8 +235,8 @@ a|==== False Positives
 
 a|==== Exploitation
 a|{yes} Yes, as long as we have
-link:../continuous-hacking/#exploitation[^20^]
-link:../one-shot-hacking/#exploitation[^21^]:
+link:../../use-cases/continuous/mock-attacks/[^20^]
+link:../../use-cases/one-shot/infection/[^21^]:
 
 * An available environment.
 * The appropriate authorization.
@@ -245,8 +244,7 @@ link:../one-shot-hacking/#exploitation[^21^]:
 
 a|==== Custom Exploits
 | {yes} Using our own exploitation engine
-[button]#link:../../products/asserts/[Asserts]#
-(link:../../products/integrates/#exploit[example]).
+[button]#link:../../products/asserts/[Asserts]#.
 | {no} Unable to create and execute exploits.
 
 a|==== link:../../blog/importance-pentesting/#diagram[Correlation]
@@ -256,7 +254,7 @@ a new vulnerability `C` of greater impact which may compromise more registers.
 but it's not able to correlate them.
 
 a|==== Infection
-| {yes} In our [button]#link:../../services/one-shot-hacking/[One shot hacking]#
+| {yes} In our [button]#link:../../use-cases/one-shot/infection/[One shot hacking]#
 service we infect stations and critical servers
 using cyberweapons.
 | {no} Don't infect or dispose of cyberweapons.
@@ -275,14 +273,13 @@ This allows us to show the severity of any individual vulnerability on:
 * Files in hard disk.
 * Central repositories without password.
 
-link:../../products/integrates/#compromised-records[Example].
 | {no} No record extraction
 
 a|==== Cycles
 | {yes} Multiple cycles in our service: +
 {sp} +
-[button]#link:../../services/continuous-hacking/[Continuous Hacking]#
-link:../continuous-hacking/#remediation-validation[^23^].
+[button]#link:../../use-cases/continuous/[Continuous Hacking]#
+link:../../use-cases/continuous/hacking-techniques/[^23^].
 | {no}  Only 1.
 
 a|==== link:../../blog/replaced-machines/[Escapes]
@@ -292,10 +289,9 @@ a|==== link:../../blog/replaced-machines/[Escapes]
 a|==== Remediation
 a|* During the project you can request clarifications
 directly from our hackers via
-[button]#link:../../products/integrates/[Integrates]#
-(link:../../products/integrates/#doubts-regarding-the-vulnerabilities[example]).
-link:../continuous-hacking/#remediation-support[^24^]
-link:../one-shot-hacking/#remediation[^25^].
+[button]#link:../../products/integrates/[Integrates]#.
+link:../../use-cases/continuous/remediation/[^24^]
+link:../../use-cases/one-shot/[^25^].
 | {no} No support during remediation phase.
 
 a|==== Deliverables
@@ -303,14 +299,14 @@ a|{yes} Real-time documentation web system
 [button]#link:../../products/integrates/[Integrates]#
 which allows our customers to auto generate and supervise
 every system since day 1 of the project
-link:../continuous-hacking/#generate-technical-and-executive-reports-from-integrates[^26^]
-link:../one-shot-hacking/#daily-progress-reports[^27^]:
+link:../../use-cases/continuous/vuln-management/[^26^]
+link:../../use-cases/one-shot/vuln-management/[^27^]:
 
-* Executive report in `PDF` (link:../../products/integrates/#generate-executive-reports[example]).
+* Executive report in `PDF`.
 * Technical report in `XLS`.
-* Technical report in `PDF` (link:../../products/integrates/#generate-technical-reports[example]).
-* Graphics on the security of the system (link:../../products/integrates/#project-status-graphs[example]).
-* Metrics on the security of the system (link:../../products/integrates/#project-statistics[example]).
+* Technical report in `PDF`.
+* Graphics on the security of the system.
+* Metrics on the security of the system.
 
 a|{no}  Available only at the end of the project
 because it is manually generated.
@@ -321,8 +317,8 @@ because it is manually generated.
 a|==== End
 |{yes} Our service ends when the agreed upon scope is completed,
 without any increase in cost to you.
-link:../continuous-hacking/#information-gets-deleted-securely[^28^]
-link:../one-shot-hacking/#information-gets-deleted-securely[^29^]
+link:../../use-cases/continuous/critical-information/[^28^]
+link:../../use-cases/one-shot/critical-information/[^29^]
 |{no} The service ends
 when a prior agreed upon time limit for the project runs out.
 Therefore, the scope and coverage was not defined and is unknown.
@@ -333,6 +329,6 @@ a|==== Pricing
 
 |====
 {sp} +
-Want further information about our services?
+Do you want more information about our services?
 Do not hesitate to
 [button]#link:../../contact-us/[contact us]#.
