--- a/content/pages/rules/architecture/266/index.adoc
+++ b/content/pages/rules/architecture/266/index.adoc
@@ -65,3 +65,10 @@ V1.4 Access Control Architectural Requirements.(1.4.1)]
 Verify that trusted enforcement points such as at access control gateways,
 servers, and serverless functions enforce access controls.
 Never enforce access controls on the client.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V9.1 Communications Security Requirements.(9.1.3)]
+Verify that old versions of SSL and TLS protocols, algorithms, ciphers, and
+configuration are disabled,
+such as SSLv2, SSLv3, or TLS 1.0 and TLS 1.1.
+The latest version of TLS should be the preferred cipher suite.
