refac(doc): #3291 fixing-more-links-ii
- Solved tasks: 36, 37, 38.


Former-commit-id: b54340580ab690f1821258319cd737602c79e02c

--- a/content/blog/rules-new-standard/index.adoc
+++ b/content/blog/rules-new-standard/index.adoc
@@ -94,7 +94,7 @@ Let's finish this blog post by mentioning them.
 
 == Standards
 
-.Photo by link:https://unsplash.com/@_ananas_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText[Mathieu Perrier] on Unsplash
+.link:https://unsplash.com/photos/1wDyL2_NmE4[Photo by Mathieu Perrier] on Unsplash
 image::standards.png[standards]
 
 . link:https://www.hhs.gov/hipaa/index.html[`HIPAA`]
