feat(doc): #2994.144 create rule 336
- Created R336 for outdated protocols
- Added a Description
- Added ASVS and CWE references


Former-commit-id: b7d8c9e13e8092640aadc261ba1fad54196d3720

--- a/content/pages/findings/security/052/index.adoc
+++ b/content/pages/findings/security/052/index.adoc
@@ -21,3 +21,5 @@ Alternatively, the application uses insecure encryption algorithms.
 . [[r3]] [inner]#link:/web/rules/150/[R150. Set minimum size for hash functions]#
 
 . [[r4]] [inner]#link:/web/rules/181/[R181. Transmit data using secure protocols]#
+
+. [[r5]] [inner]#link:/web/rules/336/[R336. Disable insecure TLS versions]#
