refac(doc): #3338 update-email-careers
- careers@autonomicmind.com is replaced with _@fluidattacks_


Former-commit-id: 1174df7a5b9d1ee4cda8445bd5021b4da686cef9

--- a/content/pages/careers/character-test/index.adoc
+++ b/content/pages/careers/character-test/index.adoc
@@ -40,8 +40,8 @@ nor repeated,
 . There are no wrong answers,
 . The test results are always your 4 main strengths,
 . If you have any doubts
-don’t hesitate to contact us at careers@autonomicmind.com
+don't hesitate to contact us at careers@fluidattacks.com
 
-Remember the agility with which you finish each stage
-Will be a variable taken into account
-When making our decision.
+Remember, the agility with which you finish each stage
+will be a variable taken into account
+when making our decision.
