--- a/content/pages/careers/non-technical-challenges/index.adoc
+++ b/content/pages/careers/non-technical-challenges/index.adoc
@@ -83,7 +83,7 @@ Consider combining these graphs with stacked bars.
 This type of graph can give a lot of relevant information.
 
 You may ask all questions you consider necessary
-by sending us an email at careers@autonomicmind.com.
+by sending us an email at careers@fluidattacks.com.
 All questions whose answer in already in the material we provided
 will be quietly ignored.
 Questions regarding ideas or
@@ -92,7 +92,7 @@ Questions that we consider necessary
 to give clarity to the exercise will be answered to you and
 to all other participants.
 
-This document must be delivered via email (careers@autonomicmind.com)
+This document must be delivered via email (careers@fluidattacks.com)
 in no more than 7 calendar days after completing the previous stage.
 You may ask for deadline extension
 If you send your progress and partial results and
