--- a/content/pages/careers/technical-challenges/index.adoc
+++ b/content/pages/careers/technical-challenges/index.adoc
@@ -144,7 +144,7 @@ that you are no longer interested in continuing the process.
 partial solutions as your own (plagiarism).
 . If you solve a challenge with the help of others.
 
-In all cases, the email address for these steps is: careers@autonomicmind.com
+In all cases, the email address for these steps is: careers@fluidattacks.com
 
 If you were removed from the challenge due to circumstances 1, 2 or 3,
 you may apply again, at any time, and start the process over by clicking
