--- a/content/pages/careers/terms/index.adoc
+++ b/content/pages/careers/terms/index.adoc
@@ -12,7 +12,7 @@
 Please read every item below carefully.
 
 If you have any questions about any item,
-do not hesitate to email us at careers@autonomicmind.com.
+do not hesitate to email us at careers@fluidattacks.com.
 
 To take part in the process,
 fill out the following [inner]#link:https://fluidattacks.com/forms/seleccion[form]#.
@@ -114,4 +114,4 @@ but also for openings with some of our business associates.
 . By default, your records will stay in our database
 so you may be considered for future open positions.
 ** If you wish to have your data deleted from our database
-you must send us an email indicating so at careers@autonomicmind.com.
+you must send us an email indicating so at careers@fluidattacks.com.
