--- a/content/pages/security/index.adoc
+++ b/content/pages/security/index.adoc
@@ -169,12 +169,12 @@ industry-standard
   validated with ACME protocol,
   and [inner]#link:../rules/092/[not self-signed]#.
 
-=== 2.3 We hack ourselves
+=== 2.3 Continuous hacking to our technology
 
-We have full-time projects focused on hacking our software.
+We have projects focused on hacking our software.
 For us, it is essential to set an example of secure software,
 that is why today our entire technology stack
-goes through a process of [inner]#link:../services/continuous-hacking[Continuous Hacking]#.
+goes through a process of comprehensive [inner]#link:../services/continuous-hacking[Continuous Hacking]#.
 
 All our development projects run
 <<CI, Continuous Integration>>
@@ -193,13 +193,7 @@ We enforce this by requiring
 all our new employees to sign a
 non-disclosure agreement (NDA).
 
-=== 2.5 No physical keys to our offices
-
-All our offices have digital locks.
-Employees have their passwords to open the doors.
-All successful and failed access attempts are logged.
-
-=== 2.6 We only hire directly
+=== 2.5 We only hire directly
 
 All our employees have indefinite time contracts
 directly with the company.
@@ -207,26 +201,10 @@ Due to our business nature,
 we never hire through contractors,
 freelance, or any other third parties.
 
-=== 2.7 Laptop rotation
+=== 2.6 Formatting and accumulation of data
 
-We continuously renew the laptops of our employees.
-There are two main reasons for this:
-
-. *Hardware improvement:*
-  As usual, older laptops get
-  replaced with new ones due to
-  performance reasons.
-. *Information flow:*
-  Whenever a laptop
-  rotates from one employee to another,
-  a total hard drive format is demanded.
-  As laptops continuously switch
-  among different employees,
-  formatting happens often,
-  and information does not accumulate
-  in local storages.
-  The average rotation time for a laptop
-  is six months.
+Formatting of our equipment happens often,
+and the information does not accumulate in local storage.
 
 == 3. Authentication
 
@@ -769,26 +747,17 @@ with the sole purpose of accessing the Internet.
 Connections are always encrypted
 [inner]#link:../rules/252/[using WPA2-AES]#.
 
-=== 8.3 Only laptops
+=== 8.3 Own equipment and ready for telecommuting
 
-A standard laptop is given to every employee.
+link:https://en.wikipedia.org/wiki/Bring_your_own_device[BYOD] is not allowed.
+Every employee receives a computer with a password-secured BIOS,
+link:https://docs.microsoft.com/en-us/windows/security/information-protection/tpm/trusted-platform-module-overview[TPM] hardware, and [inner]#link:../rules/231/[biometric fingerprint reader]#.
 Going to the office is the rule,
 but employees can always fill out an exception form
 to telework in case they need to.
-Employees are encouraged to take their laptops home,
-as not keeping them in the same place
-decreases the risk of massive theft.
-Also, in case our offices close
+In case our offices close
 (e.g., due to link:https://en.wikipedia.org/wiki/Coronavirus_disease_2019[COVID-19] pandemic),
 everyone can still do their job seamlessly.
-All laptops have a password-secured BIOS,
-link:https://docs.microsoft.com/en-us/windows/security/information-protection/tpm/trusted-platform-module-overview[TPM]
-hardware, and
-[inner]#link:../rules/231/[biometric fingerprint reader]#.
-By owning the laptops, seizing the computer should the
-need arise becomes possible.
-link:https://en.wikipedia.org/wiki/Bring_your_own_device[BYOD]
-is not allowed.
 
 == 9. Integrity
 
