--- a/content/pages/about-us/index.adoc
+++ b/content/pages/about-us/index.adoc
@@ -7,28 +7,26 @@
 === Fluid Attacks is growing every day!
 
 Since *2001*, `Fluid Attacks` has been developing technology
-focused on cybersecurity, offering ethical hacking
-and pentesting services to companies in the banking,
-financial, technology, healthcare, insurance,
+focused on cybersecurity, offering ethical hacking and pentesting services
+to companies in the banking, financial, technology, healthcare, insurance,
 manufacturing, and airline industries, among others.
-`Fluid Attacks` has a team of *70* security analysts in San Francisco, CA,
-Bogotá, and Medellín (Colombia).
-They implement more than *200* projects a year
-and help their clients to manage their cybersecurity risks
+`Fluid Attacks` implements more than *200* projects a year
+and helps clients manage their cybersecurity risks
 and certify that their systems, which are critical to their operations,
 are safe for their users.
 
-`Fluid Attacks'` team of security experts
-specializes in continuous hacking on applications, infrastructure,
-and source code, covering all stages of software development.
-`Fluid Attacks'` team ensures
-that vulnerabilities in organizations' systems are recognized,
+`Fluid Attacks's` team of *70* security experts
+specializes in continuous hacking on applications,
+infrastructure, and source code, covering all software development stages.
+We ensure that vulnerabilities in organizations' systems are recognized,
 with no false positives or negatives.
-With `Fluid Attacks'` products,
+With `Fluid Attacks's` products,
 the clients can obtain high remediation vulnerability rates,
-all this at `DevOps` speed.
+all this at high speed.
 Besides, `Fluid Attacks` has its technology
-to support the work of the hacking team with automated attack processes,
-and to allow the client —this through the `Integrates` platform—
-to manage the projects and control the remediation processes
-in any of the phases.
+to support the work of the hacking team,
+combining effective automation and human intelligence
+during the attack processes.
+Through link:../products/integrates/[Integrates] platform,
+`Fluid Attacks's` clients can manage their projects
+and control the remediation processes in any of the phases.
