--- a/new/content/pages/use-cases/continuous/index.adoc
+++ b/new/content/pages/use-cases/continuous/index.adoc
@@ -5,11 +5,11 @@
 
 = Continuous Hacking
 
-== Report of Vulnerabilities at DevOps Speed
+== Report of Vulnerabilities at High Speed
 
-We detect and report all the vulnerabilities and security issues during +
-the whole software development cycle. +
-With this method, we detect security issues continuously as software +
-evolves. +
-The inspection is done without false positives and ensures previous +
-issues were resolved before going to production.
+We detect and report all the vulnerabilities and security issues
+during the whole software development life cycle.
+With this method, we perform comprehensive testing,
+detecting security issues continuously as software evolves.
+The inspection is done without false positives
+and ensures previous issues were resolved before going to production.
