feat(doc): #2994.148 add asvs ref to r142
Former-commit-id: d122a5f1ea5ec06061079a4782eb3fab0e9674e5

--- a/content/pages/rules/credentials/142/index.adoc
+++ b/content/pages/rules/credentials/142/index.adoc
@@ -71,4 +71,9 @@ V2.5 Credential Recovery Requirements.(2.5.4)]
 Verify shared or default accounts are not present
 (e.g. "root", "admin", or "sa").
 
-. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 2.2.d]
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.10 Service Authentication Requirements.(2.10.2)]
+Verify that if passwords are required,
+the credentials are not a default account.
+
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 2.2.d]
