--- a/new/content/pages/resources/index.adoc
+++ b/new/content/pages/resources/index.adoc
@@ -17,10 +17,12 @@ that looks for deterministic and peripheral vulnerabilities,
 and that automates attacks
 to verify the status of vulnerabilities on your system.
 
-== link:https://report2020.fluidattacks.com/[Annual Report 2020]
-
 == link:[Drills Datasheet]
 
 == link:[Forces Datasheet]
 
 == link:[Integrates Datasheet]
+
+== link:https://report2020.fluidattacks.com/[Annual Report 2020]
+
+== link:https://usa.fluidattacks.com/ebook/[eBook: Don't Crash Going Too Fast (2020)]
