refac(doc): #3352 add-links-continuous
- Links to products added on Continuous Hacking subsections.


Former-commit-id: 79f5847e4e8f091a6621ff44cb9fb45d73ad08de

--- a/new/content/pages/use-cases/continuous/mock-attacks/index.adoc
+++ b/new/content/pages/use-cases/continuous/mock-attacks/index.adoc
@@ -8,7 +8,8 @@
 
 = Mock Attacks Reproduction
 
-*Fluid Attacks* can play mock attacks with *Forces*.
-*Forces* breaks the build and calls for the remediation of the known deep,
+*Fluid Attacks* can play mock attacks with link:../../../products/forces/[*Forces*].
+link:../../../products/forces/[*Forces*] breaks the build
+and calls for the remediation of the known deep,
 the re-opened, and the new peripheral vulnerabilities.
 That call to action is for the development team.
