--- a/new/content/pages/use-cases/continuous/critical-information/index.adoc
+++ b/new/content/pages/use-cases/continuous/critical-information/index.adoc
@@ -8,7 +8,7 @@
 = Critical Information Extraction and Information Removal
 
 Information extraction is done to maximize the impacts of the finding.
-The data gathered during a subscription remains on *Integrates*.
+The data gathered during a subscription remains on link:../../../products/integrates/[*Integrates*].
 Your subscription's admin is allowed to delete it.
 The data is removed *30* days after the admin's decision. This operation can be
 reversed during those *30* days.
