--- a/new/content/pages/use-cases/continuous/environments/index.adoc
+++ b/new/content/pages/use-cases/continuous/environments/index.adoc
@@ -8,7 +8,7 @@
 
 = Severity and Testing Environments
 
-You can decide through *Rules* which security requirements will be tested.
+You can decide through link:../../../rules/[*Rules*] which security requirements will be tested.
 You can know the exact severity of each hacking
 (for inspected and uninspected profiled requirements).
 Basic service allows you to choose a single production, testing, or integration
