--- a/content/pages/services/certifications/index.adoc
+++ b/content/pages/services/certifications/index.adoc
@@ -108,4 +108,14 @@ of an extensive set of management procedures
 designed to help organizations
 achieve quality and efficiency in `IT` operations.
 
+a|== Certified Red Teaming Expert (CRTE).
+
+The Certified (Windows) Red Teaming Expert
+is an entirely hands-on certification awarded by the Pentester Academy.
+This certification guarantees an individual with the expertise
+to evaluate the security of an unknown windows infrastructure,
+and recognize misconfigurations and functionality and trust abuses.
+
+a|image::logo-crte.png[logo crte]
+
 |====
