--- a/content/pages/rules/data/185/index.adoc
+++ b/content/pages/rules/data/185/index.adoc
@@ -13,7 +13,7 @@ All stored sensitive information must be encrypted.
 == Description
 
 Systems usually store personal data, e.i. Personally Identifiable Information
-(*PII*), credentials and other types of sensitive information.
+(*PII*), medical records, credentials and other types of sensitive information.
 All of these must be encrypted before being stored using safe cryptographic
 mechanisms.
 This is also applicable when personal information must be temporarily stored
@@ -54,3 +54,15 @@ V6.1 Data Classification.(6.1.1)]
 Verify that regulated private data is stored encrypted while at rest,
 such as personally identifiable information (PII), sensitive personal
 information, or data assessed likely to be subject to EU's GDPR.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V6.1 Data Classification.(6.1.2)]
+Verify that regulated health data is stored encrypted while at rest,
+such as medical records, medical device details, or de-anonymized research
+records.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V6.1 Data Classification.(6.1.3)]
+Verify that regulated financial data is stored encrypted while at rest,
+such as financial accounts, defaults or credit history, tax records,
+pay history, beneficiaries, or de-anonymized market or research records.
